--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,7 +26,7 @@
                   contentType: 'application/json',
                   dataType: 'json',
                   url: '/validateUsername',
-                  success: function(data) {
+		  success: function(data) {
                       var data = JSON.parse(JSON.stringify(data));
 
                       if (!data.accepted) {
@@ -57,6 +57,12 @@
 
         <p style='display:none' class='alert-box error' id='message'>
         </p>
+
+	<% if (errorMessage.length > 0) { %>
+            <div class="alert-box error"><span>error: </span>
+                    <%= errorMessage %>
+            </div>
+        <% } %>
 
         <br>
 
