Edited user's web

--- a/views/user.html
+++ b/views/user.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href="user.css" rel="stylesheet" type="text/css">
+        <link href="../public/css/user.css" rel="stylesheet" type="text/css">
     </head><body>
 
-<div class="section"><div class="container"><div class="row"><div class="col-md-8"><img src="http://192.168.1.11:8081" class="img-responsive"></div><div class="col-md-4"></div></div></div></div></body></html>
+<div class="section"><div class="container"><div class="row"><div class="col-md-8"><img src="http://62.117.232.31:8081" class="img-responsive"></div><div class="col-md-4"><a class="btn btn-lg btn-primary">Click me</a></div></div></div></div></body></html>
