--- a/views/user.html
+++ b/views/user.html
@@ -6,5 +6,18 @@
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="../public/css/user.css" rel="stylesheet" type="text/css">
     </head><body>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="http://62.117.232.31:8081" class="img-responsive">
+                    </div>
+                    <div class="col-md-8">
+                        <a class="btn btn-lg btn-primary">Click me</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
 
-<div class="section"><div class="container"><div class="row"><div class="col-md-8"><img src="http://62.117.232.31:8081" class="img-responsive"></div><div class="col-md-4"><a class="btn btn-lg btn-primary">Click me</a></div></div></div></div></body></html>
+</body></html>
