--- a/public/css/user.less
+++ b/public/css/user.less
@@ -26,9 +26,9 @@
 @gray : lighten(@gray-base, 33.5%); // #555
 @gray-light : lighten(@gray-base, 46.7%); // #777
 @gray-lighter : lighten(@gray-base, 93.5%); // #eee
-@brand-primary : #85144b;
+@brand-primary : #6F5499;
 @brand-success : #5cb85c;
-@brand-info : #590d32;
+@brand-info : #563B80;
 @brand-warning : #f0ad4e;
 @brand-danger : #d9534f;
 //== Scaffolding
@@ -102,7 +102,7 @@ monospace;
 @padding-xs-horizontal : 5px;
 @line-height-large : 1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small : 1.5;
-@border-radius-base : 14px;
+@border-radius-base : 4px;
 @border-radius-large : 6px;
 @border-radius-small : 3px;
 //** Global color for active items (e.g., navs or dropdowns).
