Making user web

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -15,7 +15,7 @@
                 <small>Robot Controller</small>
               </h1>
             </div>
-            <ul class="nav nav-pills">
+            <ul class="nav nav-tabs">
               <li class="active">
                 <a href="#">Home</a>
               </li>
