Making user web

--- a/views/user.html
+++ b/views/user.html
@@ -11,8 +11,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="page-header">
-              <h1>page header
-                <small>Subtext</small>
+              <h1>Welcome user!
+                <small>Robot Controller</small>
               </h1>
             </div>
             <ul class="nav nav-pills">
@@ -36,6 +36,6 @@
         </div>
       </div>
     </div>
-  
+
 
 </body></html>
