Modifying user web

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -15,20 +15,23 @@
                 <small>Robot Controller</small>
               </h1>
             </div>
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills nav-justified">
               <li class="active">
                 <a href="#">Home</a>
-              </li>
+	      </li>
               <li>
                 <a href="#">Users</a>
               </li>
-              <li>
+	      <li>
                 <a href="#">Log Out</a>
-              </li>
+	      </li>
             </ul>
           </div>
         </div>
-        <div class="row">
+        
+	<br>
+
+	<div class="row">
           <div class="col-md-6">
             <img src="http://62.117.232.31:8081" class="img-responsive">
           </div>
