Making user web

--- a/views/user.html
+++ b/views/user.html
@@ -11,31 +11,59 @@
         <div class="row">
           <div class="col-md-12">
             <div class="page-header">
+              <!-- <h1>Welcome <%= user %>! -->
               <h1>Welcome user!
                 <small>Robot Controller</small>
               </h1>
             </div>
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills nav-justified">
               <li class="active">
                 <a href="#">Home</a>
               </li>
               <li>
                 <a href="#">Users</a>
               </li>
-              <li>
-                <a href="#">Log Out</a>
+              <li id="logout">
+                <a href="/logout">Log Out</a>
               </li>
             </ul>
           </div>
         </div>
+        <br>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
         <div class="row">
           <div class="col-md-6">
             <img src="http://62.117.232.31:8081" class="img-responsive">
+            <h1>A title</h1>
+            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+              <br>Ut enim ad minim veniam, quis nostrud</p>
+            <p></p>
           </div>
-          <div class="col-md-6"></div>
+          <div class="col-md-6">
+            <h1>A title</h1>
+            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+              <br>Ut enim ad minim veniam, quis nostrud</p>
+            <p></p>
+          </div>
         </div>
       </div>
     </div>
-
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <a class="btn btn-primary">Click me</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
 
 </body></html>
