--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,44 +1,69 @@
 <html><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="../public/css/user.css" rel="stylesheet" type="text/css">
-  </head><body>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="page-header">
-              <h1>Welcome <%= user %>!
-                <small>Robot Controller</small>
-              </h1>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="../public/css/user.css" rel="stylesheet" type="text/css">
+    </head><body>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="page-header">
+                            <!-- <h1>Welcome user! -->
+                            <h1>Welcome <%= user %>!
+                                <small>Robot Controller</small>
+                            </h1>
+                        </div>
+                        <ul class="nav nav-pills nav-justified">
+                            <li class="active">
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">Users</a>
+                            </li>
+                            <li>
+                                <a href="#">Log Out</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <br>
             </div>
-            <ul class="nav nav-pills nav-justified">
-              <li class="active">
-                <a href="#">Home</a>
-	      </li>
-              <li>
-                <a href="#">Users</a>
-              </li>
-	      <li>
-                <a href="#">Log Out</a>
-	      </li>
-            </ul>
-          </div>
         </div>
-        
-	<br>
-
-	<div class="row">
-          <div class="col-md-6">
-            <img src="http://62.117.232.31:8081" class="img-responsive">
-          </div>
-          <div class="col-md-6"></div>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="http://62.117.232.31:8081" class="img-responsive">
+                        <img src="http://62.117.232.31:8081" class="img-responsive"><h1>A title</h1>
+                        <p></p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+                            <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                            <br>Ut enim ad minim veniam, quis nostrud</p>
+                        <p></p>
+                    </div>
+                    <div class="col-md-6">
+                        <h1>A title</h1>
+                        <p></p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+                            <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
+                            <br>Ut enim ad minim veniam, quis nostrud</p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <a class="btn btn-primary">Click me</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 </body></html>
