Modifying user web

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -24,7 +24,7 @@
                                 <a href="#">Users</a>
                             </li>
                             <li>
-                                <a href="#">Log Out</a>
+                                <a href="/logout">Log Out</a>
                             </li>
                         </ul>
                     </div>
@@ -37,7 +37,6 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img src="http://62.117.232.31:8081" class="img-responsive">
-                        <img src="http://62.117.232.31:8081" class="img-responsive"><h1>A title</h1>
                         <p></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
                             <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
