--- a/views/user.html
+++ b/views/user.html
@@ -1,9 +1,9 @@
 <html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
+    <link href="../public/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="../public/css/user.css" rel="stylesheet" type="text/css">
   </head><body>
     <div class="section">
@@ -64,6 +64,6 @@
         </div>
       </div>
     </div>
-  
+
 
 </body></html>
