Adding arrows to control the robot

--- a/views/user.html
+++ b/views/user.html
@@ -1,10 +1,15 @@
 <html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
+
     <link href="../public/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="../public/css/user.css" rel="stylesheet" type="text/css">
+    <link href="../public/css/bootstrap-arrows.css" data-angle="stylesheet" type="text/css">
+
+    <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../public/js/bootstrap-arrows.js"></script>
+
   </head><body>
     <div class="section">
       <div class="container">
@@ -59,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-primary">Click me</a>
+            <span class="arrow-info" data-angle="90"></span>
           </div>
         </div>
       </div>
