--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,8 +3,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../public/bootstrap-arrows/js/bootstrap-arrows.js"></script>
         <link href="../public/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="../public/css/user.css" rel="stylesheet" type="text/css">
+        <link href='../public/bootstrap-arrows/css/bootstrap-arrows.css' data-angle='stylesheet' type='text/css' />
     </head><body>
         <div class="section">
             <div class="container">
