Adding arrows to control the robot

--- a/views/user.html
+++ b/views/user.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span class="arrow-info" data-angle="90"></span>
+            <span class="arrow"></span>
           </div>
         </div>
       </div>
