--- a/views/user.ejs
+++ b/views/user.ejs
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../public/js/bootstrap-arrows.js"></script>
-    
+
     </head><body>
         <div class="section">
             <div class="container">
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <a class="btn btn-primary">Click me</a>
+                        <span class="arrow"></span>
                     </div>
                 </div>
             </div>
