--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,7 +7,7 @@
     <link href="../public/css/bootstrap-arrows.css" data-angle="stylesheet" type="text/css">
 
     <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
+   <!-- <script type="text/javascript" src="../public/js/bootstrap.min.js"></script> -->
     <script type="text/javascript" src="../public/js/bootstrap-arrows.js"></script>
 
     </head><body>
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <span class="arrow"></span>
+                        <span class='arrow'></span>
                     </div>
                 </div>
             </div>
