--- a/views/user.ejs
+++ b/views/user.ejs
@@ -51,7 +51,7 @@
                     <div class="col-md-6">
                         <h1>A title</h1>
                         <p></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisici elit,
                             <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
                             <br>Ut enim ad minim veniam, quis nostrud</p>
                         <p></p>
