--- a/views/user.ejs
+++ b/views/user.ejs
@@ -62,7 +62,7 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-offset-1">
                         <span class="arrow-primary"></span>
                     </div>
                 </div>
