Adding arrows to control the robot

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,8 +7,13 @@
     <link href="../public/css/bootstrap-arrows.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="../public/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../public/js/bootstrap-arrows.js"></script>
+
+    <script>
+      $(document).ready(function() {
+            $('.arrow, [class^=arrow-]').bootstrapArrows();
+      });
+    </script>
 
     </head><body>
         <div class="section">
@@ -42,11 +47,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img src="http://62.117.232.31:8081" class="img-responsive">
-                        <p></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
-                            <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-                            <br>Ut enim ad minim veniam, quis nostrud</p>
-                        <p></p>
+                        <br>
+                        <div class="col-md-offset-3">
+                          <span class="arrow-primary"></span>
+                        </div>
+                        <div class="col-md-offset-2">
+                          <span class="arrow-primary" data-angle="270"></span>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <h1>A title</h1>
