Adding socket.io connection for rows

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,6 +12,9 @@
     <script>
       $(document).ready(function() {
             $('.arrow, [class^=arrow-]').bootstrapArrows();
+
+            var socket = io();
+
             $("#arrowDown").click(function() {
                 alert('Clicked Down!');
             });
