--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,7 +7,7 @@
     <link href="../public/css/bootstrap-arrows.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script type="text/javascript" src="../public/js/socket.io-1.3.5.js"></script>
     <script type="text/javascript" src="../public/js/bootstrap-arrows.js"></script>
 
     <script>
