--- a/views/user.html
+++ b/views/user.html
@@ -5,10 +5,17 @@
     <link href="../public/css/user.css" rel="stylesheet" type="text/css">
     <link href="../public/css/bootstrap-arrows.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="../public/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/socket.io-1.3.5.js"></script>
     <script type="text/javascript" src="../public/js/bootstrap-arrows.js"></script>
     <script>
       $(document).ready(function() {
                     $('.arrow, [class^=arrow-]').bootstrapArrows();
+        
+                    var socket = io();
+        
+                    $("#arrowDown").click(function() {
+                        alert('Clicked Down!');
+                    });
               });
     </script>
   </head><body>
@@ -56,11 +63,22 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h1>A title</h1>
+            <h1 id="usersConnected"></h1>
             <p></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,
-              <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
-              <br>Ut enim ad minim veniam, quis nostrud</p>
+            <p>
+              <br>
+              <br>
+              <br>
+              <br>
+            </p>
+            <h3 class="text-muted">
+              <b>Actual state of the Robot:</b>
+            </h3>
+            <br>
+            <div class="col-md-offset-3" id="actualState">
+              <!-- <span class="arrow-success-large" data-angle="180" id="arrowState"></span> -->
+            </div>
+            <p></p>
             <p></p>
           </div>
         </div>
@@ -73,6 +91,6 @@
         </div>
       </div>
     </div>
-
+  
 
 </body></html>
