--- a/views/user.ejs
+++ b/views/user.ejs
@@ -74,8 +74,7 @@
                   <span class="arrow-primary" data-angle="180" id="arrowDown"></span>
                 </div>
               </div>
-              <div class="col-md-6">
-                <h1 id="usersConnected"></h1>
+              <div class="col-md-6" id="usersConnected">
                 <p></p>
                 <p>
                   <br>
