--- a/views/user.ejs
+++ b/views/user.ejs
@@ -75,11 +75,9 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <h3><p id="usersConnected" class="text-info"></p></h3>
+                <h2><b><p id="usersConnected" class="text-info"></p></b></h2>
                 <p></p>
                 <p>
-                  <br>
-                  <br>
                   <br>
                   <br>
                 </p>
