--- a/views/user.ejs
+++ b/views/user.ejs
@@ -24,9 +24,30 @@
                 $("#usersConnected").text(data).show('slow');
             });
 
-            $("#arrowDown").click(function() {
-                alert('Clicked Down!');
-            });
+            $("#arrowUp")
+                .mousedown(function() {
+                    socket.emit('arrow', 'up');
+                });
+
+            $("#arrowDown")
+                .mousedown(function() {
+                    socket.emit('arrow', 'down');
+                });
+
+            $("#arrowLeft")
+                .mousedown(function() {
+                    socket.emit('arrow', 'left');
+                });
+
+            $("#arrowRight")
+                .mousedown(function() {
+                    socket.emit('arrow', 'right');
+                });
+
+            $("arrow-primary")
+                .mouseup(function() {
+                    socket.emit('arrow', stop);
+                });
       });
     </script>
 
@@ -86,7 +107,6 @@
                 </h3>
                 <br>
                 <div class="col-md-offset-3" id="actualState">
-                  <!-- <span class="arrow-success-large" data-angle="180" id="arrowState"></span> -->
                 </div>
                 <p></p>
                 <p></p>
