Developing socket.io

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -46,7 +46,7 @@
 
             $("arrow-primary")
                 .mouseup(function() {
-                    socket.emit('arrow', stop);
+                    socket.emit('arrow', 'stop');
                 });
       });
     </script>
