--- a/views/user.ejs
+++ b/views/user.ejs
@@ -115,6 +115,7 @@
                 </h3>
                 <br>
                 <div class="col-md-offset-3" id="actualState">
+                    <span class="arrow-success-large" data-angle="180"></span>
                 </div>
                 <p></p>
                 <p></p>
