--- a/views/user.ejs
+++ b/views/user.ejs
@@ -17,7 +17,19 @@
             var socket = io();
 
             socket.on('actualState', function(data) {
-                $("#actualState").html(data);
+                if (data.indexOf('Stopped') != -1) {
+                    $("#arrowState").attr({
+                        "style" : "display:none"
+                    });
+
+                    $("#actualState").html(data);
+                }
+                else {
+                    $("#arrowState").attr({
+                        "style" : "display:inline",
+                        "data-angle" : data
+                    });
+                }
             });
 
             socket.on('usersConnected', function(data) {
@@ -115,7 +127,7 @@
                 </h3>
                 <br>
                 <div class="col-md-offset-3" id="actualState">
-                    <span class="arrow-success-large" data-angle="180"></span>
+                    <span class="arrow-success-large" data-angle="" style='display:none' id="arrowState"></span>
                 </div>
                 <p></p>
                 <p></p>
