Developing socket.io

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -16,6 +16,9 @@
 
             var socket = io();
 
+            $("#arrowState").hide();
+            $("#arrowStateS").show();
+
             socket.on('actualState', function(data) {
                 if (data.indexOf('Stopped') != -1) {
                     $("#arrowState").hide();
