--- a/views/user.ejs
+++ b/views/user.ejs
@@ -16,20 +16,20 @@
 
             var socket = io();
 
-            $("#arrowState").bootstrapArrows().hide();
+            //$("#arrowState").hide();
             $("#arrowStateS").show();
 
             socket.on('actualState', function(data) {
                 if (data == 'stop') {
-                    $("#arrowState").hide();
+                    //$("#arrowState").hide();
                     $("#arrowStateS").show();
                 }
-                else {                    
+                else {
                     $("#arrowState")
                         .attr({
                             "data-angle" : data
-                        })
-                        .show();
+                        });
+                        //.show();
                     $("#arrowStateS").hide();
                 }
             });
