Developing socket.io

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -114,7 +114,7 @@
                   <span class="arrow-primary" data-angle="90" id="arrowRight"></span>
                 </div>
                 <div class="col-md-offset-3">
-                  <span class="arrow-primary" data-angle="180" id="arrowDown"></span>
+                  <span class="arrow-primary-large" data-angle="180" id="arrowDown"></span>
                 </div>
               </div>
               <div class="col-md-6">
