Developing socket.io

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,7 +12,7 @@
 
     <script>
       $(document).ready(function() {
-            //$('.arrow, [class^=arrow-]').bootstrapArrows();
+            $('.arrow, [class^=arrow-]').bootstrapArrows();
 
             var socket = io();
 
@@ -70,7 +70,6 @@
                     socket.emit('arrow', 'stop');
                 });
 
-            $('.arrow, [class^=arrow-]').bootstrapArrows();
       });
     </script>
 
@@ -130,7 +129,7 @@
                 </h3>
                 <br>
                 <div class="col-md-offset-3" id="actualState">
-                    <span class="arrow-success-large" data-angle="90" id="arrowState"></span>
+                    <span class="arrow-primary" data-angle="90" id="arrowState"></span>
                     <h3 id="arrowStateS">Stopped</h3>
                 </div>
                 <p></p>
