Developing socket.io

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -15,6 +15,7 @@
             //$('.arrow, [class^=arrow-]').bootstrapArrows();
 
             var socket = io();
+            alert(socket);
 
             $("#arrowState").hide();
 
