--- a/views/user.ejs
+++ b/views/user.ejs
@@ -14,6 +14,7 @@
       $(document).ready(function() {
             //$('.arrow, [class^=arrow-]').bootstrapArrows();
 
+            alert('Testing...');
             var socket = io();
             alert(socket);
 
